tests/compilation/examples/neither/fail_error_spanned.stderr
error: spanned error
 --> tests/compilation/examples/fail_error_spanned.rs:3:16
  |
3 | spanned_error!(one, two, three);
  |                ^^^
  |
note: this error originates from the macro invocation here
 --> tests/compilation/examples/fail_error_spanned.rs:3:1
  |
3 | spanned_error!(one, two, three);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `spanned_error` (in Nightly builds, run with -Z macro-backtrace for more info)
